# TeSoPs-ELECTRIcity_NILM

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Electricity_model.py  Inference_with_own_data.ipynb  Own_data.ipynb  PChainger_Parser.py  README.dev.md  README.md  README.md.orig  Refit_Parser.py  Test_Parser.ipynb  UKDALE_Parser.py  electricity.py  flake.nix  inference.ipynb  inference_with_own_data.py  metrics.py  pyproject.toml  requirements.txt  sonar-project.properties
.github/next_steps/: 01_sonarcloud_integration.md  02_citation.md  03_readthedocs.md  04_zenodo_integration.md  05_linting.md
.github/workflows/: build.yml  sonarcloud.yml
docs/: Makefile  conf.py  index.rst  make.bat
examples/: inference.py
notebooks/: Inference_with_own_data.ipynb  Own_data.ipynb  Test_Parser.ipynb  inference.ipynb  inspect_results.ipynb
src/electricity/: Electricity_model.py  NILM_Dataloader.py  NILM_Dataset.py  PChainger_Parser.py  PretrainDataset.py  Pretrain_Dataset.py  REDD_Parser.py  Trainer.py  config.py  electricity.py  inference.py  inference_with_own_data.py  metrics.py  model_helpers.py
src/electricity/parsers/: PChaingerParser.py  PChainger_Parser.py  REDDParser.py  REDD_Parser.py  RefitParser.py  Refit_Parser.py  UKDALE_Parser.py  UKDaleParser.py  __init__.py
tests/: integration_test.py  test_my_module.py
tests/test_data/: main.csv  powerchainger_output.npy
