[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Ole Mussmann", email = "gitlab+account@ole.mn"},
]
dependencies = [
    "torch>=2.0.1",
    "tensorboard>=2.14.0",
    "pandas<2.0.0",
    "tqdm>=4.66.1",
    "scikit-learn>=1.3.0",
    "jupyterlab>=4.0.6",
    "plotly>=5.17.0",
    "ipywidgets>=8.1.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

